# NJU-algorithm

./: .gitignore  AGENTS.md  map_1774572097.yaml  navigation_task.yaml  tick_project.sh  todo.md  使用说明书.md  模块拓扑方案.md
decision_task/: CMakeLists.txt  command.md  package.xml  start_decision.sh  start_pose.sh
decision_task/config/: config.json  decision.yaml  decisions.json  decisions_test.json  patrol.yaml  patrol_sim.yaml  pose_init.yaml  waypoints.json  waypoints_test.json
decision_task/config/decision/: decisions.json  decisions_test.json
decision_task/config/test/: patrol_sim.yaml
decision_task/config/waypoint/: waypoints.json  waypoints_simple.json  waypoints_test.json
decision_task/docs/: decision_flowchart.md
decision_task/include/decision/: judge_parser.hpp  robot_decision.hpp  structs.h
decision_task/launch/: decision.launch.py  patrol.launch.py  patrol_sim.launch.py  patrol_sim_full.launch.py  pose_init.launch.py  pose_init_and_decision.launch.py
decision_task/src/: decision_node.cpp  patrol_node.cpp  patrol_sim_node.cpp  pose_initializer_node.cpp  robot_decision.cpp  simple_decision_node.cpp
docs/: tup2pb.md
navigation_task/: NAV_COMMANDS.md  POINTCLOUD_2D_MAPPER.md  ROBOT_COMMANDS.md  cyclonedds.xml  kill_navigation.sh  pointcloud_2d_mapper.py  rmul.pgm  save_mid360_snapshot.py  start_nav.sh
navigation_task/output/mid360_snapshot/: current_mid360.pcd
navigation_task/rm_nav_bringup/config/reality/: fastlio_mid360_real.yaml  measurement_params_real.yaml  nav2_params_real.yaml  segmentation_real.yaml
navigation_task/rm_nav_bringup/launch/: bringup_real.launch.py
navigation_task/rm_nav_bringup/map/: my_lab_map.data  my_lab_map.pgm  my_lab_map.yaml
navigation_task/rviz_configs/: README.md  mapping_view.rviz
navigation_task/src/rm_nav_bringup/launch/: bringup_real.launch.py  (+1 more)
navigation_task2/small_gicp_relocalization/: CMakeLists.txt
robot_bringup/: package.xml  setup.py  start_robot.sh
robot_bringup/launch/: robot_bringup.launch.py
robot_bringup/systemd/: README.md  install.sh  robot_nav.service  robot_nav_healthcheck.service  robot_nav_healthcheck.sh  robot_nav_healthcheck.timer  robot_system.target  robot_vision.service  uninstall.sh
vision_task/: .clang-format  .gitignore  CLAUDE.md  TODO.md  start_vision.sh
vision_task/aim_task/: CMakeLists.txt  New_structure.md  README.md
vision_task/aim_task/config/: video_test.yaml
vision_task/aim_task/include/: armor.hpp
vision_task/aim_task/tasks/: aim_pipeline.cpp  aim_pipeline.hpp  auto_aim_system.cpp  auto_aim_system.hpp  buff_pipeline.cpp  buff_pipeline.hpp  pipeline_types.hpp
vision_task/aim_task/tools/: draw.cpp  draw.hpp  parser.cpp  parser.hpp  visualizer.hpp
vision_task/armor_task/: CMakeLists.txt  FPS_OPTIMIZATION.md  New_structure.md  README.md  todo.md
vision_task/armor_task/config/: camera1.yaml  deploy_test.yaml  video_test.yaml
vision_task/armor_task/cuda/: yolo_decode.cu  yolo_decode.cuh  yolo_types.hpp
vision_task/armor_task/include/: armor.hpp  car.hpp  structures.hpp
vision_task/armor_task/io/: keyboard_manager.cpp  keyboard_manager.hpp  ros2_manager.cpp  ros2_manager.hpp  serial_manager.cpp  serial_manager.hpp  thread_safe_queue.hpp
vision_task/armor_task/io/algorithm/: ros2_transfer.hpp  thread_safe_queue.hpp
vision_task/armor_task/io/camera/: camera_base.cpp
vision_task/armor_task/io/camera/hik/: hik.cpp  hik.hpp
vision_task/armor_task/io/dataframe/: base_cmd.hpp  sentry_data.hpp  struct.hpp  transfer.hpp
vision_task/armor_task/io/driver/camera/: camera_base.hpp  direct_image_source.hpp
vision_task/armor_task/io/driver/cboard/: cboard.cpp
vision_task/armor_task/io/driver/ros2/: ros2_image_source.cpp  ros2_manager.cpp  ros2_manager.hpp
vision_task/armor_task/io/ros2/: ros2_manager.cpp  ros2_manager.hpp
vision_task/armor_task/io/structs/: camera_info.hpp  frame.hpp  gimbal.hpp  judger.hpp
vision_task/armor_task/io/usb/: cboard.cpp  cboard.hpp  thread_safety.cpp  thread_safety.hpp  unpack.cpp  unpack.hpp
vision_task/armor_task/src/: main.cpp
vision_task/armor_task/tasks/: CMakeCache.txt  aim_pipeline.cpp  aim_pipeline.hpp  aimer.cpp  aimer.hpp  auto_aim_system.cpp  auto_aim_system.hpp  detector.cpp  detector.hpp  ekf.cpp  ekf.hpp  imu_history.cpp  imu_history.hpp  pipeline_types.hpp  pnp_solver.cpp  pnp_solver.hpp  shooter.cpp  shooter.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
vision_task/armor_task/test/deploy/: auto_aimer.cpp  communication.cpp  target.cpp
vision_task/armor_task/test/deploy/auto_aim/: auto_aim.cpp
vision_task/armor_task/test/deploy_old/: auto_aimer.cpp  communication.cpp  pnp_solver.cpp  ros2_manager_change_log.md  target.cpp
vision_task/armor_task/test/scripts/: camera_test.cpp
vision_task/armor_task/test/video/: video_test.cpp
vision_task/armor_task/tools/: draw.cpp  draw.hpp  math_tools.hpp  parser.cpp  parser.hpp  pharser.cpp  pharser.hpp  transfer.cpp  transfer.hpp  visualizer.cpp  visualizer.hpp
vision_task/armor_task_bak/config/: deploy_test.yaml  video_test.yaml
vision_task/armor_task_bak/cuda/: yolo_decode.cuh
vision_task/armor_task_bak/include/: armor.hpp  car.hpp  structures.hpp
vision_task/armor_task_bak/io/: ros2_manager.cpp  ros2_manager.hpp  serial_manager.cpp  serial_manager.hpp
vision_task/armor_task_bak/tasks/: CMakeCache.txt  aimer.cpp  detector.hpp  ekf.cpp  pnp_solver.cpp  target.hpp  tracker.cpp  trajectory_normal.cpp  trajectory_normal.hpp  trajectory_rk4.hpp
vision_task/armor_task_bak/tools/: draw.hpp  pharser.hpp  transfer.cpp  transfer.hpp  visualizer.hpp
vision_task/camera_calibration/camera_callibration/: README.md  camera_calibration_node.py  config.yaml  requirements.txt  run_calibration.sh
vision_task/hiki_ros2/: CAMERA_LAUNCH_PARAM_SUMMARY.md  CAMERA_TUNING_GUIDE.md  CMakeLists.txt  README.md  adjust_camera_params.sh  package.xml  start_camera.sh
vision_task/hiki_ros2/config/: camera_params.yaml  config_camera_in_mvs.sh
vision_task/hiki_ros2/launch/: hik_camera.launch.py
vision_task/hiki_ros2/src/: hik_camera_node.cpp  main.cpp
(+98 files in other folders)
