<?xml version="1.0"?>
<package format="3">
  <name>decision</name>
  <version>0.0.1</version>
  <description>Simple decision node integrating vision and navigation.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>opencv</depend>
  <depend>nlohmann_json</depend>

  <export>
  </export>
</package>

