<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Meta package for robot system bringup: navigation, camera, and decision modules.</description>
  <maintainer email="nvidia@example.com">NVIDIA</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rm_nav_bringup</exec_depend>
  <exec_depend>hik_camera</exec_depend>
  <exec_depend>decision</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
